src/app.css
/* Global application styles can go here. */

html,
body {
  overflow: hidden; /* Hide scrollbars */
  touch-action: none; /* Prevent bounce */
  overscroll-behavior: none; /* Prevent pull-to-refresh on iOS */
  margin: 0; /* Remove default body margin */
  padding: 0; /* Remove default body padding */
  width: 100%; /* Ensure full width */
  height: 100%; /* Ensure full height */

  font-family: sans-serif;

  --toolbar-margin: 0.9375rem;

  /* These below are here so that the size of the icon button can influence
    the width of the title panel */
  --icon-button-size: 2.3rem;
  --available-title-panel-width: calc(
    100vw - 2 * (var(--icon-button-size) - 2 * var(--toolbar-margin))
  );
  --title-panel-width: min(var(--available-title-panel-width), 20rem);
  --panel-background-color: #fffc;
  --panel-border-radius: 0.4rem;
  --panel-padding-h: 1rem;
  --panel-padding-v: 0.5rem;

  --filtered-color: #ffd580;
  --accent-color: #ffd580;
  --selected-color: #e8f0fe;
  --hover-color: #f0f0f0;
  --hover-selected-color: #dceafe;

  /* Suppress default OS long press actions on mobile */
  user-select: none;
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10+ */
  touch-action: manipulation; /* Prevent default touch behaviors like context menu */
}

body.touch-device {
  --icon-size: 2.5em;
  --icon-button-size: 4em;
  --available-title-panel-width: calc(
    100vw - (var(--icon-button-size) + 2 * var(--toolbar-margin))
  );
  --hover-color: transparent;
  --hover-selected-color: var(--selected-color);
}

.link-button {
  background: none;
  font-size: 1rem;
  border: none;
  padding: 0;
  cursor: pointer;
  text-decoration: none;
}

.link-button:hover {
  text-decoration: underline;
  text-decoration-color: currentColor;
}

.maplibregl-ctrl-bottom-right {
  margin: var(--toolbar-margin);
  z-index: 999;
}

button {
  font-size: 0.9rem;
}

